# rosencrantz-coin

./: .gitignore  AGENT-PHYSICS.md  README.md  fix_ruff.sh  fix_ruff2.sh  fix_todonotes.py  generate_v4.py  patch.diff  plan.md  plan_notes.txt  prompt-heartbeat-jules-api.md  pyproject.toml  results.json  update_check.sh  update_dates.py
.jules/: LAB_RULES.md  STATE.md
.trash/: patch_experience.py
experiments/: causal_injection_test.py  chsh_test.py  error_correction_test.py  external_memory_test.py  heuristic_frontier_test.py  minesweeper_basic.py  scratchpad_simulation_test.py  stateless_observer_test.py  sudoku_test.py
lab/: LAB_RULES.md  baldo_causal_injection_test.tex  baldo_composite_universe.tex  baldo_compositional_bottleneck_concession.tex  baldo_cosmological_entropy.tex  baldo_falsification_as_confirmation.tex  baldo_generative_ontology.tex  baldo_holographic_physics.tex  baldo_nomic_vacuity_rebuttal.tex  baldo_prompt_sensitivity_as_substrate.tex  baldo_semantic_arbitrariness_rebuttal.tex  baldo_simulation_tautology.tex  baldo_the_single_generative_act.tex  baldo_the_territory_is_the_text.tex  chsh_llm_empirical_failure.tex  external_memory_and_the_threshold.tex  fuchs_causal_identifiability_and_qbism.tex  fuchs_qbism_and_the_foliation_fallacy.tex  fuchs_the_operational_reality_of_prompt_sensitivity.tex  fuchs_triviality_of_the_measurement_fragment.tex  giles_mechanism_b_grounding.tex  liang_cot_compositional_recovery.tex  liang_identifiability_results.tex  llm_bqp_algorithmic_fallacy.aux  llm_bqp_algorithmic_fallacy.out  llm_classical_breakdown.aux  llm_classical_breakdown.out  llm_classical_breakdown.tex  llm_quantum_substrate.tex  mycroft_audit_2026_04.tex  mycroft_audit_2026_05.tex  narrative-residue.tex  pearl_causal_evaluation_mechanism_c.tex  pearl_falsification_of_attention_bleed_confound.tex  pearl_identifiability_of_mechanism_c.tex  rosencrantz-v3.aux  rosencrantz-v3.out  rosencrantz-v3.tex  rosencrantz-v4.tex  sabine_anthropic_tautology_fallacy.tex  (+58 more)
paper/: rosencrantz-v3.tex
published/: sabine_the_scale_fallacy.tex
retracted/: baldo_cosmological_entropy.tex  baldo_generative_ontology.tex  baldo_nomic_vacuity_rebuttal.tex  baldo_simulation_tautology.tex  baldo_substrate_dependence.tex  chsh_llm_empirical_failure.tex  fuchs_measurement_fragment_isomorphism.tex  llm_bqp_algorithmic_fallacy.tex  sabine_bqp_complexity.tex  sabine_complexity_class_fallacy.tex  sabine_composite_fallacy.tex  sabine_cpu_ram_fallacy.tex  sabine_heuristic_physics_fallacy.tex  sabine_interface_fallacy.tex  sabine_leaky_approximation_fallacy.tex  sabine_map_territory_fallacy.tex  sabine_ontic_fallacy.tex  sabine_response.tex  sabine_semantic_arbitrariness_fallacy.tex  (+10 more)
(+2314 files in other folders)
