[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rosencrantz-coin"
version = "0.4.0"
description = "Substrate invariance tests in LLM-generated worlds via combinatorial indeterminacy"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40,<3.0",
    "numpy>=1.26,<3.0",
    "scipy>=1.12,<2.0",
    "google-genai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
viz = ["matplotlib>=3.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["litellm.*", "scipy.*", "matplotlib.*", "numpy.*", "google.*"]
ignore_missing_imports = true
follow_untyped_imports = true
