[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rosencrantz-coin"
version = "0.4.0"
description = "A framework for exactly evaluating LLM generative behavior on NP-hard distributions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40,<3.0",
    "numpy>=1.26,<3.0",
    "scipy>=1.12,<2.0",
    "google-genai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "requests",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["rosencrantz*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".git",
    ".github",
    ".jules",
    "venv",
    ".venv",
]

[tool.ruff.lint]
extend-ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
