[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rosencrantz-coin"
version = "0.4.0"
description = "A probe for detecting causal structure vs semantic association in generative logic."
authors = [{ name = "Franklin Baldo", email = "franklin.baldo@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40,<3.0",
    "numpy>=1.26,<3.0",
    "scipy>=1.12,<2.0",
    "google-genai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "requests",
]

[tool.ruff]
line-length = 250

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]
